feat: add user search
