# src/api/dtos/users/get-users.input.dto.ts
@@ -1,0 +1,9 @@
+import { ApiPropertyOptional } from '@nestjs/swagger';
+import { IsOptional, IsString } from 'class-validator';
+
+export class GetUsersInputDTO {
+  @ApiPropertyOptional()
+  @IsString()
+  @IsOptional()
+  public readonly nameLike?: string;
+}
